--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 streamlit
-plotly
-matplotlib
-pandas
 streamlit-option-menu
+pandas
+plotly
+numpy
+matplotlib
+seaborn
+missingno
+wordcloud
+nltk
+scikit-learn
+lightgbm
+xgboost
+scipy
+catboost
